objects/ssot__FinancialGoal__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActualValueAmount__c</fullName>
        <label>Actual Value Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CompletionDate__c</fullName>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Currency__c</fullName>
        <label>Currency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EstimatedSuccessPercent__c</fullName>
        <label>Estimated Success Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FinancialGoalPriority__c</fullName>
        <label>Financial Goal Priority</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FinancialGoalStatus__c</fullName>
        <label>Financial Goal Status</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FinancialGoalType__c</fullName>
        <label>Financial Goal Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FinancialPlanId__c</fullName>
        <label>Financial Plan</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Financial Goal Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InitialValueAmount__c</fullName>
        <label>Initial Value Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__TargetDate__c</fullName>
        <label>Target Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TargetValueAmount__c</fullName>
        <label>Target Value Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1705061033601_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FinancialGoal_FinancialPlanId_map_Fi_rel</label>
        <referenceTo>ssot__FinancialPlan__dlm</referenceTo>
        <relationshipLabel>FinancialGoal_FinancialPlanId_map_Fi_rel</relationshipLabel>
        <relationshipName>rel_1705061033601_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>